[package]
name = "escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = '0.24.2' }
anchor-spl = { version = '0.24.2' }
spl-token = { version = "^3.1.1", features = ["no-entrypoint"] }
anyhow = "=1.0.58"
