[package]
name = "mono-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mono_program"

[features]
default = ["mainnet"]
mainnet = []
localnet = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
solana-program = "1.14"
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"